<resources>
    <string name="app_name">LE</string>

    <!-- Strings related to login -->
    <string name="login_account">Account</string>
    <string name="login_password">Password</string>
    <string name="login_login">login</string>
    <string name="login_register">register</string>
    <string name="hint_username">请输入账号 :</string>
    <string name="hint_password">请输入密码 :</string>
    <string name="hint_mobilenum">请输入手机号 :</string>
    <string name="hint_address">请输入地址 :</string>
    <string name="hint_comment">请输入注释 :</string>

    <string name="register_register">Confirm</string>
    <string name="register_useranme">Username</string>
    <string name="register_password">Password</string>
    <string name="register_cpassword">Confirm Password</string>
    <string name="register_email">Email</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
