<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        tools:context="com.wenner.github.activity.LoginActivity"
android:background="@drawable/ti1">

    <Button
            android:id="@+id/btnregister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:layout_marginRight="60dp"
            android:background="@drawable/buttn"
            android:text="@string/login_register"
            app:layout_constraintRight_toLeftOf="@+id/btnlogin"
            app:layout_constraintTop_toBottomOf="@+id/login_password"
            tools:layout_constraintTop_creator="1"/>

    <Button
            android:id="@+id/btnlogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/buttn"
            android:text="@string/login_login"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_password"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintTop_creator="1"
            android:layout_marginTop="28dp"
            android:layout_marginRight="80dp"/>

    <EditText
            android:id="@+id/login_account"
            android:layout_width="240dp"
            android:layout_height="45dp"
            android:layout_marginBottom="48dp"
            android:ems="10"
            android:hint="@string/login_account"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/login_password"
            app:layout_constraintLeft_toLeftOf="@+id/login_password"
            app:layout_constraintRight_toRightOf="@+id/login_password"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1"
            app:layout_constraintHorizontal_bias="0.0"/>
    <EditText
            android:id="@+id/login_password"
            android:layout_width="240dp"
            android:layout_height="45dp"
            android:ems="10"
            android:hint="@string/login_password"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@+id/btnlogin"
            app:layout_constraintRight_toRightOf="@+id/btnregister"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_constraintBottom_creator="1"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintTop_creator="1"
            app:layout_constraintHorizontal_bias="0.486"
            app:layout_constraintVertical_bias="0.549"/>
    <TextView
            android:id="@+id/title"
            android:layout_width="250dp"
            android:layout_height="65dp"
            android:layout_marginBottom="40dp"
            android:text="Hi--LE"
            android:textAlignment="center"
            android:textSize="50sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/login_account"
            app:layout_constraintLeft_toLeftOf="@+id/login_account"
            app:layout_constraintRight_toRightOf="@+id/login_account"
            app:layout_constraintHorizontal_bias="1.0"/>

</android.support.constraint.ConstraintLayout>